[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scenes/Actors/FishNet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Actors/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Levels/TileMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/background_real.png" type="Texture" id=4]
[ext_resource path="res://Background Pieces/BubblePool.gd" type="Script" id=5]
[ext_resource path="res://Assets/Quiet Night.wav" type="AudioStream" id=6]
[ext_resource path="res://Scenes/Levels/background_movement.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Levels/Congrats.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Levels/DeathScreen.gd" type="Script" id=9]
[ext_resource path="res://Background Pieces/SeaweedPool.gd" type="Script" id=10]
[ext_resource path="res://Background Pieces/Background Fishes/FishPool.gd" type="Script" id=11]
[ext_resource path="res://Boxes/HealthUI.gd" type="Script" id=12]
[ext_resource path="res://Scenes/Actors/Obstacles/ObjectPool.gd" type="Script" id=13]
[ext_resource path="res://Assets/you_died.png" type="Texture" id=14]
[ext_resource path="res://Background Pieces/TentaclePool.gd" type="Script" id=15]
[ext_resource path="res://Scenes/Levels/TileMap.gd" type="Script" id=16]
[ext_resource path="res://Completed Scenes/main_scene.gd" type="Script" id=17]
[ext_resource path="res://Assets/heart_final.png" type="Texture" id=18]
[ext_resource path="res://Assets/congrats_screen.png" type="Texture" id=19]
[ext_resource path="res://Assets/underwater_sound.wav" type="AudioStream" id=20]
[ext_resource path="res://Enemies/AnglerPool.gd" type="Script" id=21]
[ext_resource path="res://Background Pieces/Boat.tscn" type="PackedScene" id=22]
[ext_resource path="res://Assets/black2.png" type="Texture" id=23]
[ext_resource path="res://Background Pieces/FilterBlack.gd" type="Script" id=24]
[ext_resource path="res://Background Pieces/BlackScreen.tscn" type="PackedScene" id=25]

[sub_resource type="AnimationNodeStateMachinePlayback" id=1]

[sub_resource type="Environment" id=2]
background_mode = 4
glow_enabled = true
glow_intensity = 2.0
glow_strength = 1.47
glow_blend_mode = 0
glow_hdr_threshold = 1.2

[node name="MainScene" type="Node2D"]
script = ExtResource( 17 )

[node name="Background1" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false
script = ExtResource( 7 )

[node name="Background2" type="Sprite" parent="."]
position = Vector2( 1000, 0 )
texture = ExtResource( 4 )
centered = false
script = ExtResource( 7 )

[node name="TileMap" parent="." instance=ExtResource( 3 )]
position = Vector2( -41.2095, 13.0022 )
tile_data = PoolIntArray( -131073, 2, 0, -196608, 2, 0, -196607, 2, 0, -196606, 2, 0, -196605, 2, 0, -196604, 2, 0, -196603, 2, 0, -196602, 2, 0, -196601, 2, 0, -196600, 2, 0, -196599, 2, 0, -196598, 2, 0, -196597, 2, 0, -65537, 2, 0, -131072, 2, 0, -131062, 2, 0, -131061, 2, 0, -1, 2, 0, -65536, 2, 0, -65526, 2, 0, -65525, 2, 0, 65535, 2, 0, 0, 2, 0, 10, 2, 0, 11, 2, 0, 131071, 2, 0, 65536, 2, 0, 65546, 2, 0, 65547, 2, 0, 196607, 2, 0, 131072, 2, 0, 131082, 2, 0, 131083, 2, 0, 262143, 2, 0, 196608, 2, 0, 196618, 2, 0, 327679, 2, 0, 262144, 2, 0, 262154, 2, 0, 393215, 2, 0, 327680, 2, 0, 327690, 2, 0, 458751, 2, 0, 393216, 2, 0, 393226, 2, 0, 524287, 2, 0, 458752, 2, 0, 458762, 2, 0, 589823, 2, 0, 524288, 2, 0, 524298, 2, 0, 655359, 2, 0, 589824, 2, 0, 589834, 2, 0, 720895, 2, 0, 655360, 2, 0, 655370, 2, 0, 786431, 2, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 0, 720904, 2, 0, 720905, 2, 0, 720906, 2, 0, 786440, 2, 0, 786441, 2, 0, 786442, 2, 0, 851968, 2, 0, 851978, 2, 0 )
script = ExtResource( 16 )

[node name="Boat" parent="." instance=ExtResource( 22 )]
position = Vector2( 64, 8.00001 )
z_index = 1

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 216.771, 207.941 )
z_index = 12

[node name="AudioStreamPlayer" parent="Player" index="5"]
volume_db = -5.0

[node name="GlowTween" type="Tween" parent="Player"]

[node name="Fishnet" parent="." instance=ExtResource( 1 )]
position = Vector2( 1033.04, 373.104 )
scale = Vector2( 2, 2.44 )
z_index = 3

[node name="AnimationTree" parent="Fishnet" index="2"]
parameters/playback = SubResource( 1 )

[node name="ObstaclePool" type="Node" parent="."]
script = ExtResource( 13 )
path = "res://Scenes/Actors/Obstacles/"
num_of_copies = 10
spawn_interval = 900

[node name="SeaweedPool" type="Node" parent="."]
script = ExtResource( 10 )
path = "res://Background Pieces/"

[node name="BubblePool" type="Node" parent="."]
script = ExtResource( 5 )
path = "res://Background Pieces/"

[node name="FishPool" type="Node" parent="."]
script = ExtResource( 11 )
path = "res://Background Pieces/Background Fishes/"

[node name="TentaclePool" type="Node" parent="."]
script = ExtResource( 15 )
path = "res://Background Pieces/"

[node name="AnglerPool" type="Node" parent="."]
script = ExtResource( 21 )
path = "res://Enemies/"

[node name="Filter" type="StaticBody2D" parent="."]
z_index = 9

[node name="FilterBlack" type="Sprite" parent="Filter"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 684.37, 300 )
scale = Vector2( 0.75637, 0.585185 )
texture = ExtResource( 23 )
script = ExtResource( 24 )

[node name="EndTimer" type="Timer" parent="."]

[node name="DeathScreen" type="Sprite" parent="."]
position = Vector2( 512, 259 )
scale = Vector2( 1.73143, 1.46286 )
z_index = 20
texture = ExtResource( 14 )
script = ExtResource( 9 )

[node name="BlackOut" type="Sprite" parent="DeathScreen"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 27.7227, 30.7617 )
scale = Vector2( 0.367574, 0.386617 )
z_index = 20
texture = ExtResource( 23 )

[node name="Congrats" type="Sprite" parent="."]
position = Vector2( 513.5, 296.5 )
scale = Vector2( 1.41429, 1.23143 )
z_index = 20
texture = ExtResource( 19 )
script = ExtResource( 8 )

[node name="BlackOut" parent="Congrats" instance=ExtResource( 25 )]
visible = true

[node name="HealthUI" type="Control" parent="."]
margin_left = 824.0
margin_top = 16.0
margin_right = 864.0
margin_bottom = 56.0
rect_scale = Vector2( 0.88, 0.799999 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartUI" type="TextureRect" parent="HealthUI"]
margin_left = -224.0
margin_right = 30.0
margin_bottom = 95.0
rect_scale = Vector2( 1.18181, 1.3 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundMusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 1.0

[node name="BackgroundWater" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -5.0

[node name="FadeIn" parent="." instance=ExtResource( 25 )]
visible = true
position = Vector2( 488, 296 )
scale = Vector2( 0.516766, 0.544881 )
z_index = 14

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )
[connection signal="difficulty_1" from="." to="Filter/FilterBlack" method="_on_MainScene_difficulty_1"]
[connection signal="difficulty_1" from="." to="ObstaclePool" method="_on_Root_difficulty_1"]
[connection signal="difficulty_1" from="." to="Player" method="_on_MainScene_difficulty_1"]
[connection signal="difficulty_2" from="." to="TentaclePool" method="_on_Root_difficulty_2"]
[connection signal="difficulty_2" from="." to="AnglerPool" method="_on_MainScene_difficulty_2"]
[connection signal="difficulty_2" from="." to="Filter/FilterBlack" method="_on_MainScene_difficulty_2"]
[connection signal="difficulty_2" from="." to="ObstaclePool" method="_on_Root_difficulty_2"]
[connection signal="difficulty_2" from="." to="Player" method="_on_MainScene_difficulty_2"]
[connection signal="difficulty_3" from="." to="AnglerPool" method="_on_MainScene_difficulty_3"]
[connection signal="difficulty_3" from="." to="Filter/FilterBlack" method="_on_MainScene_difficulty_3"]
[connection signal="difficulty_3" from="." to="ObstaclePool" method="_on_Root_difficulty_3"]
[connection signal="difficulty_3" from="." to="Player" method="_on_MainScene_difficulty_3"]
[connection signal="difficulty_4" from="." to="Filter/FilterBlack" method="_on_MainScene_difficulty_4"]
[connection signal="difficulty_4" from="." to="ObstaclePool" method="_on_Root_difficulty_4"]
[connection signal="difficulty_4" from="." to="Player" method="_on_MainScene_difficulty_4"]
[connection signal="death_screen" from="Player" to="DeathScreen" method="_on_Player_death_screen"]
[connection signal="end_card" from="Player" to="Congrats" method="_on_Player_end_card"]
[connection signal="health_disappear" from="Player" to="HealthUI" method="_on_Player_health_disappear"]
[connection signal="turn_off_tilemap" from="Player" to="TileMap" method="_on_Player_turn_off_tilemap"]
[connection signal="change_health" from="Player/PlayerStats" to="HealthUI" method="_on_PlayerStats_change_health"]
[connection signal="player_dead" from="Player/PlayerStats" to="AnglerPool" method="_on_PlayerStats_player_dead"]
[connection signal="player_dead" from="Player/PlayerStats" to="SeaweedPool" method="_on_PlayerStats_player_dead"]
[connection signal="player_dead" from="Player/PlayerStats" to="FishPool" method="_on_PlayerStats_player_dead"]
[connection signal="player_dead" from="Player/PlayerStats" to="ObstaclePool" method="_on_PlayerStats_player_dead"]
[connection signal="player_dead" from="Player/PlayerStats" to="Background2" method="_on_PlayerStats_player_dead"]
[connection signal="player_dead" from="Player/PlayerStats" to="Background1" method="_on_PlayerStats_player_dead"]
[connection signal="timeout" from="EndTimer" to="Fishnet" method="_on_EndTimer_timeout"]
[connection signal="timeout" from="EndTimer" to="AnglerPool" method="_on_EndTimer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
[connection signal="timeout" from="EndTimer" to="SeaweedPool" method="_on_EndTimer_timeout"]
[connection signal="timeout" from="EndTimer" to="FishPool" method="_on_EndTimer_timeout"]
[connection signal="timeout" from="EndTimer" to="ObstaclePool" method="_on_EndTimer_timeout"]
[connection signal="timeout" from="EndTimer" to="Player" method="_on_EndTimer_timeout"]
[connection signal="timeout" from="EndTimer" to="Background2" method="_on_EndTimer_timeout"]
[connection signal="timeout" from="EndTimer" to="Background1" method="_on_EndTimer_timeout"]
[connection signal="cue_music_dissappear" from="DeathScreen" to="." method="_on_DeathScreen_cue_music_dissappear"]
[connection signal="cue_music_dissappear" from="Congrats" to="." method="_on_Congrats_cue_music_dissappear"]

[editable path="Player"]

[editable path="Fishnet"]
